--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,6 +2,6 @@
   <p>
     <strong>Body:</strong>
     <div id="editor" readonly></div>
-    <input id="post_body" hidden value="<%= post.body %>"/>
+    <input id="post_body" hidden value="<%= post.body %>" data-editor-target="body"/>
   </p>
 </div>
